--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Satisfy&display=swap" rel="stylesheet">
     <!-- Link to your external CSS file -->
-    <link rel="stylesheet" href="trove_login.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
 
